@@ -10,7 +10,7 @@
  * See the file "license.terms" for information on usage and redistribution
  * of this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tkTextIndex.c,v 1.7 2003/05/19 13:04:23 vincentdarley Exp $
+ * RCS: @(#) $Id: tkTextIndex.c,v 1.8 2003/10/10 15:56:22 dkf Exp $
  */
 
 #include "default.h"
@@ -56,7 +56,7 @@ static void		UpdateStringOfTextIndex _ANSI_ARGS_((Tcl_Obj *objPtr));
  * Define the 'textindex' object type, which Tk uses to represent
  * indices in text widgets internally.
  */
-Tcl_ObjType tclTextIndexType = {
+Tcl_ObjType tkTextIndexType = {
     "textindex",			/* name */
     FreeTextIndexInternalRep,		/* freeIntRepProc */
     DupTextIndexInternalRep,	        /* dupIntRepProc */
@@ -165,7 +165,7 @@ MakeObjIndex(textPtr, objPtr, origPtr)
     indexPtr->linePtr = origPtr->linePtr;
     indexPtr->byteIndex = origPtr->byteIndex;
     SET_TEXTINDEX(objPtr, indexPtr);
-    objPtr->typePtr = &tclTextIndexType;
+    objPtr->typePtr = &tkTextIndexType;
     indexPtr->textPtr = textPtr;
 
     if (textPtr != NULL) {
@@ -187,7 +187,7 @@ TkTextGetIndexFromObj(interp, textPtr, objPtr)
     TkTextIndex *indexPtr = NULL;
     int cache;
     
-    if (objPtr->typePtr == &tclTextIndexType) {
+    if (objPtr->typePtr == &tkTextIndexType) {
 	int epoch;
 	
 	indexPtr = GET_TEXTINDEX(objPtr);
