@@ -1,3 +1,8 @@
+2003-10-10  Donal K. Fellows  <fellowsd@cs.man.ac.uk>
+
+	* generic/tkObj.c (TkRegisterObjTypes): Register the type of text
+	indexes.
+
 2003-10-09  Jeff Hobbs  <jeffh@ActiveState.com>
 
 	* win/tkWinButton.c (TkpDisplayButton): correct imageYOffset for
